--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5 {
 
 h1.hero-title {
 	font-weight: 900;
-    font-size: 2.75em;
+    font-size: 2.85em;
     margin-bottom: 0;
     opacity: 0;
 	animation: fadein ease-in 1;
@@ -68,7 +68,7 @@ h3.GDsubtitle {
 
 h3.hero-subtitle {
 	font-weight: 700;
-	font-size: 1.2em;
+	font-size: 1.5em;
 	margin-top: 0.1em;
     margin-bottom: 2.5em;
 	color: #5B95EB;
@@ -169,7 +169,7 @@ p.GDprojectinfo {
 }
 
 p.hero-para {
-	width: 65%;
+	width: 70%;
 	opacity: 0;
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
@@ -290,10 +290,10 @@ a.person {
 .home-button {
     background: #5B95EB;
     border-radius: 100em;
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 1em;
+    padding-right: 1em;
     height: 2.8em;
-    width: 12em;
+    width: 12.1em;
     margin-top: 2em;
     color: white;
     text-decoration: none;
@@ -536,8 +536,8 @@ img.work-pic-white {
 
 .col-3 {
 	float: left;
-	width: 30.8%;
-	margin-right: 3.8%;
+	width: 49%;
+	padding-bottom: 80em;
 }
 
 	.last {
@@ -560,7 +560,9 @@ img.work-pic-white {
 }
 
 .grid {
-	display: inline-block;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 3em;
 }
 
 .herocontainer {
@@ -620,27 +622,18 @@ img.work-pic-white {
 }
 
 .misc-img {
-	height: 240px;
-	width: 240px;
+	height: 112.875%;
+	width: 100%;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
 	overflow: hidden;
-	border-radius: 0.3em;
-	float: left;
-	margin-bottom: 1.8em;
+	margin-bottom: -0.4em;
 	opacity: 0;
 	animation: fadein ease-in 1;
 	animation-fill-mode: forwards;
 	animation-duration: 0.8s;
 }
-
-	.misc-img:hover {
-		transform: scale(1.05);
-		-webkit-transition: 0.6s ease;
-		-moz-transition: 0.6s ease;
-		transition: 0.6s ease;
-	}
 
 .overlay {
   top: 0;
@@ -664,7 +657,7 @@ img.work-pic-white {
   font-weight: 400;
   text-align: center;
   color: white;
-  font-size: 1.3em;
+  font-size: 1.65em;
   position: relative;
   top: 45%;
   left: 50%;
@@ -678,7 +671,7 @@ img.work-pic-white {
   font-weight: 100;
   text-align: center;
   color: white;
-  font-size: 0.9em;
+  font-size: 1.05em;
   position: relative;
   max-width: 92.5%;
   top: 46%;
@@ -703,7 +696,7 @@ img.work-pic-white {
 }
 
 .work-container {
-	margin-top: 10em;
+	margin-top: 8em;
 	margin-bottom: 4.25em;
 	opacity: 0;
 	animation: fadein ease-in 1;
