--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -87,7 +87,7 @@ h3.construction-subtext {
 }
 
 h3.work-title {
-	font-size: 1.75em;
+		font-size: 1.75em;
     font-weight: 700;
     margin-bottom: 0;
     margin-top: -10.1em;
@@ -790,6 +790,9 @@ img.work-pic-white {
 		padding-right: 0;
 		margin: auto 128px auto 128px;
 	}
+	.home-imgblock {
+		background-position: 57.25%;
+	}
 }
 
 @media (min-width: 426px) and (max-width: 768px) {
@@ -804,12 +807,11 @@ img.work-pic-white {
 	.homecontainer {
 		width: 100%;
 	}
+	.home-imgblock {
+		background-position: 52.5%;
+	}
 	.home-img {
 		height: 450px;
-	}
-	.misc-img {
-		width: 200px;
-		height: 200px;
 	}
 	p.hero-para {
 		width: 75%;
@@ -839,8 +841,18 @@ img.work-pic-white {
 	a.nav-link {
 		margin-left: 0;
 	}
+	p.project-info {
+		width: 85%;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: auto;
+	}
 	.banner {
 		height: 600px;
+	}
+	.grid {
+		display: inline-block;
+		margin-top: auto;
 	}
 	.navRight {
 		display: grid;
@@ -854,8 +866,14 @@ img.work-pic-white {
 	.work {
 		display: block;
 	}
+	.work-block {
+		text-align: center;
+	}
 	.homecontainer {
 		width: 100%;
+	}
+	.home-imgblock {
+		background-position: left;
 	}
 	.herocontainer {
 		margin-top: 4.5em;
@@ -867,10 +885,10 @@ img.work-pic-white {
 	.col-3 {
 		width: 100%;
 		float: none;
+		padding-bottom: 0;
 	}
 	.misc-img {
-		width: 350px;
-		height: 350px;
+		padding-top: 100%;
 	}
 	h1.hero-title, h3.hero-subtitle, p.hero-para {
 		width: 100%;
@@ -878,16 +896,8 @@ img.work-pic-white {
 	}
 }
 
-@media all and (max-width: 320px) {
-	.misc-img {
-		height: 250px;
-		width: 250px;
-	}
-}
-
-@media (min-width: 321px) and (max-width: 375px) {
-	.misc-img {
-		height: 300px;
-		width: 300px;
+@media all and (max-width: 375px) {
+	p.project-info {
+		width: 100%;
 	}
 }
