--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -724,13 +724,19 @@ img.work-pic-white {
 }
 
 .banner {
-	width: 100%;
+	width: 100vw;
     margin-top: 0.6em;
     overflow: hidden;
-    height: 805px;
-    background-size: auto 100%;
+    height: 815px;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
+	left: 50%;
+  	right: 50%;
+  	margin-left: -50vw;
+  	margin-right: -50vw;
+  	z-index: -100;
 }
 
 .break {
